Some further work with the tutorial...

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,3 +215,14 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+# Import the secure module
+module.secure=${play.path}/modules/secure
+
+# Blog engine configuration
+# ~~~~~
+blog.title=Yet another blog
+blog.baseline=We will write about nothing
+
+secure.username=Your email:
+secure.password=Your password:
+secure.signin=Log in now
