GAE-ify, compile errors tough in tests...

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -82,7 +82,7 @@ date.format=yyyy-MM-dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db=mem
+# db=mem
 #
 # To connect to a local MySQL5 database, use:
 # db=mysql://user:pwd@host/database
@@ -207,6 +207,11 @@ mail.smtp=mock
 # Example, for textmate:
 # play.editor=txmt://open?url=file://%s&line=%s
 
+#siena.ddl can take values create/update/none
+siena.ddl=create
+%prod.siena.ddl=none
+
+
 # Testing. Set up a custom configuration for test mode
 # ~~~~~
 #%test.module.cobertura=${play.path}/modules/cobertura
@@ -217,6 +222,14 @@ mail.smtp=mock
 
 # Import the secure module
 module.secure=${play.path}/modules/secure
+
+# Additional modules
+# ~~~~~
+# A module is another play! application. Add a line for each module you want
+# to add to your application. Module paths are either absolutes or relative to
+# the application root.
+#
+module.gae=${play.path}/modules/gae-1.6.0
 
 # Blog engine configuration
 # ~~~~~
